
2000-10-30  Dan Kuchler  <kuchler@ajubasolutions.com>

        * Made some fixes to better support windows.

2000-10-27  Dan Kuchler  <kuchler@ajubasolutions.com>

        * Initial revision of tcllib ftpd.  Based off of the ftpd in
          the stdtcl distribution.
