@@ -9,7 +9,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
-# RCS: @(#) $Id: ftpd.tcl,v 1.5 2000/10/30 20:01:32 kuchler Exp $
+# RCS: @(#) $Id: ftpd.tcl,v 1.6 2000/11/02 00:02:20 kuchler Exp $
 #
 
 # Define the ftpd package version 1.1
@@ -145,8 +145,8 @@ proc ::ftpd::config {args} {
 	{authIpCmd.arg  {} {Callback to authenticate new connections based on the ip-address of the peer. Optional}} \
 	{authUsrCmd.arg {::ftpd::anonAuth} {Callback to authenticate new connections based on the user logging in.}} \
 	{authFileCmd.arg {::ftpd::fileAuth} {Callback to accept or deny a users access to read and write to a specific path or file.}} \
-	{logCmd {::ftpd::logStderr} {Callback for log information generated by the FTP engine.}} \
-	{fsCmd  {::ftpd::fsFile::fs} {Callback to connect the engine to the filesystem it operates on.}}]]
+	{logCmd.arg {::ftpd::logStderr} {Callback for log information generated by the FTP engine.}} \
+	{fsCmd.arg {::ftpd::fsFile::fs} {Callback to connect the engine to the filesystem it operates on.}}]]
     return
 }
 
@@ -291,7 +291,7 @@ proc ::ftpd::anonAuth {user pass} {
     # provided which is at least similar to an
     # fully qualified email address.
 
-    if {![string equal $user anonymous]} {
+    if {(![string equal $user anonymous]) && (![string equal $user ftp])} {
 	return 0
     }
 
@@ -361,7 +361,7 @@ proc ::ftpd::unixAuth {user pass} {
 
     ::ftpd::Log debug $passwords
 
-    if {[string equal $user anonymous]} {
+    if {[string equal $user anonymous] || [string equal $user ftp]} {
 
         set pass [split $pass @]
         if {[llength $pass] != 2} {
@@ -408,7 +408,7 @@ proc ::ftpd::unixAuth {user pass} {
 proc ::ftpd::server {{myaddr {}}} {
     variable port
     if {[string length $myaddr]} {
-	socket -server ::ftpd::accept $port -myaddr $myaddr
+	socket -server ::ftpd::accept -myaddr $myaddr $port
     } else {
 	socket -server ::ftpd::accept $port
     }
